--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
 :root {
     --std: all .2s ease-in-out;
+    --mid: #ADAAAA;
+    --light: #C9C3C3;
+    --white: #FAF3F3;
 }
 body {
-    color: lightgray;
+    color: var(--light);
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: lightgray;
+    background-color: var(--light);
     font-size: 2rem;
 }
 button {
@@ -20,11 +23,6 @@ button:hover {
 }
 .card {
     position: relative;
-    background-color: #464646;
-    border-radius: 7px;
-    padding: 12px;
-    width: 50rem;
-    height: 30rem;
 }
 header {
     width: 47rem;
@@ -39,7 +37,12 @@ header {
 .card:hover header {
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -64%);
+    transform: translate(-50%, -62%);
+}
+.card:hover footer {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -38%);
 }
 header > img {
     border-radius: 7px;
@@ -64,19 +67,59 @@ header .material-symbols-outlined {
     font-size: 8rem;
     font-variation-settings: 'wght' 300;
 }
-.buttons {
+footer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flexbox;
+    background-color: #464646;
+    border-radius: 7px;
+    padding: 12px;
+    width: 50rem;
+    height: 30rem;
+    transition: var(--std);
+}
+.stats, .tags {
+    margin: 1rem 1rem;
+}
+.stats {
+    color: var(--mid);
+    position: absolute;
+    top: 72%;
+}
+.stats > span:not(:first-of-type), .tags > span:not(:first-of-type) {
+    display: inline-block;
+    margin: auto .5em;
+}
+.likes {
+    color: limegreen;
+}
+.rating {
+    padding: .2rem .4rem;
+    font-size: .6em;
+    border: 1px solid var(--mid);
+}
+.tags {
+    font-size: .9em;
     position: absolute;
     top: 83%;
-    width: 100%;
+}
+.tags > span:not(:last-of-type):after {
+    content: "\2022";
+    color: var(--mid);
+    padding-left: 2rem;
+}
+.buttons {
+    position: absolute;
+    top: 79%;
+    left: 68%;
 }
 .buttons > button {
-    font-size: 38px;
+    font-size: 42px;
     clip-path: circle();
+    padding: 1px;
 }
 .buttons > button:hover {
     background-color: rgba(108, 108, 108, 0.4);
-}
-#more {
-    position: absolute;
-    left: 86%;
 }
